<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_autenticacion">

    <fragment
        android:id="@+id/navigation_autenticacion"
        android:name="com.biogin.myapplication.ui.seguridad.autenticacion.AutenticacionFragment"
        android:label="@string/title_autenticacion"
        tools:layout="@layout/fragment_autenticacion" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.biogin.myapplication.ui.seguridad.logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs_security" />

    <fragment
        android:id="@+id/navigation_acerca"
        android:name="com.biogin.myapplication.ui.seguridad.acerca.AcercaFragment"
        android:label="@string/title_Acerca"
        tools:layout="@layout/fragment_acerca" />
</navigation>