<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rrhh.categorias.ABMCategoryActivity">

    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/texto_ayuda_categorias"
        android:textAlignment="textStart"
        android:paddingHorizontal="10dp"
        android:justificationMode="inter_word"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrucciones" />

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="Docente"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrucciones" />

    <TextView
        android:id="@+id/texto_categoria_temporal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textAlignment="textStart"
        android:paddingHorizontal="10dp"
        android:justificationMode="inter_word"
        android:text="@string/ayuda_categoria_temporal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_input" />

    <CheckBox
        android:id="@+id/checkbox_temporal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        android:text="Es temporal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_categoria_temporal" />

    <TextView
        android:id="@+id/texto_categoria_institutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textAlignment="textStart"
        android:paddingHorizontal="10dp"
        android:justificationMode="inter_word"
        android:text="@string/ayuda_categoria__institutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_categoria_temporal" />

    <CheckBox
        android:id="@+id/checkbox_instituto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:text="Permite institutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_categoria_institutos" />

    <Button
        android:id="@+id/agregar_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="@color/blue"
        android:text="@string/agregar_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_categoria_institutos" />

</androidx.constraintlayout.widget.ConstraintLayout>